--- a/TantranshSolutions/src/components/Navbar/Navbar.css
+++ b/TantranshSolutions/src/components/Navbar/Navbar.css
@@ -1,7 +1,7 @@
-.nav-link{
+.navigation-link{
     position: relative;
 }
-.nav-link:after{
+.navigation-link:after{
     content:"";
     position: absolute;
     background-color: #034694;
@@ -11,9 +11,9 @@
     bottom:0;
     transition: 0.3s;
 }
-.nav-link:hover:after{
+.navigation-link:hover:after{
     width: 100%;
 }
-.nav-link:hover{
+.navigation-link:hover{
     color: black;
 }
